tests/samples/negative/pointers/ptr_from_addr_non_pointer.ax
module ptr_from_addr_non_pointer;

fn main() -> i32 {
    let value: i32 = ptr_from_addr(i32, 0);
    return value;
}
